test/error/parser/enum-mixed-mode-2.dsk
enum Mixed
    Ok
    NotFound = 404
    Error = 500
end
